src/test/deca/context/invalid/Objet/Selection-UpCast-Assign.deca
// Description:
//      Casting down and trying to call method
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
    void fooB() {

    }
}

{
    B b = new B();
    B a = (A) (b);
    print(a.x);
}
